# teerex

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
config/: fixed_balanced_50.json  fixed_cpu_heavy_50.json  fixed_gpu_heavy_50.json  mode_async.json  mode_blocking.json  mode_event_barrier.json  poisson_high_variance_100.json
docs/: plan.md
docs/figures/: event_timeline.typ
notebooks/: simload.ipynb
simload_runs/: mode_async.csv  mode_blocking.csv
teerex/: analysis.py  simload.py
